--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -1,7 +1,10 @@
-= About the Asciidoctor Project
+= Asciidoctor Community
 :navtitle: About
 
-The Asciidoctor project is an effort to bring a comprehensive and accessible publishing toolchain, centered around the AsciiDoc syntax, to a growing range of ecosystems.
+The Asciidoctor community of projects (aka Asciidoctor project) is an ongoing effort to develop a comprehensive and accessible toolchain and workbench for writing and publishing AsciiDoc content across various platforms and runtimes.
 
-In addition to AsciiDoc processors for the Ruby, JavaScript, and JVM platforms, the project provides build tool, browser, and IDE plugins, as well as extensions for use cases such as diagramming and charts.
-The Asciidoctor project also pushes AsciiDoc to evolve by introducing new ideas and innovation and helps promote AsciiDoc through education and advocacy.
+In addition to AsciiDoc processors for the Ruby, JavaScript, and JVM platforms, the community develops plugins for build tools, browsers, and IDEs, as well as extended converters for producing additional output formats and extensions for augmenting documents with rich media such as diagrams and charts.
+
+The Asciidoctor community also pushes AsciiDoc to evolve by introducing new ideas and innovation and helps promote AsciiDoc through education and advocacy.
+Most notably, Asciidoctor has been the driving force behind the initiative to establish a https://www.eclipse.org/org/workinggroups/asciidoc-charter.php[working group for AsciiDoc^] at the Eclipse Foundation.
+The main goal of the AsciiDoc Working Group is to oversee the creation of a formal specification for the AsciiDoc language.
