--- a/home/modules/ROOT/pages/index.adoc
+++ b/home/modules/ROOT/pages/index.adoc
@@ -69,13 +69,10 @@ Even extract and convert AsciiDoc inside Javadoc comments or include snippets fr
 //* *Gradle plugin*
 
 Extensions::
-Author HTML slide presentations in AsciiDoc without having to wrestle with the clutter of HTML.
-Reserve the option of single sourcing your content for publishing to other formats.
+Author HTML slide presentations in AsciiDoc without having to wrestle with the clutter of HTML or add diagrams to the output file that are generated from plain text markup inside your AsciiDoc document using extensions.
+The possiblities are boundless!
 
 * xref:reveal.js-converter::index.adoc[reveal.js converter]
-+
-Add diagrams to the output file that are generated from plain text markup inside your AsciiDoc document.
-
 * xref:diagram-extension::index.adoc[Diagram extension]
 
 Site generation::
