--- a/home/modules/ROOT/pages/index.adoc
+++ b/home/modules/ROOT/pages/index.adoc
@@ -93,7 +93,7 @@ Keep this essential reference material for writing and publishing content with A
 [discrete#search-tips]
 === How to search the docs
 
-On any page, you can press the kbd:[s] key to focus the search box.
+On any page, you can press the kbd:[s] key (or kbd:[Ctrl,/]) to focus the search box.
 Enter one or more terms (i.e., a query) to search the documentation.
 As you enter your query, the search results will be displayed in a panel immediately below the search box.
 You can navigate the search results either using the mouse or the up and down keys.
